modified index - nav

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Maxio Medicali</title>
+    <title>Maxio Medical Limited</title>
     <meta content="" name="description">
   
     <meta content="" name="keywords">
@@ -41,17 +41,17 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/naph-removebg-preview.png" alt="">
-        <span>Naphtali</span>
+        <span>Maxio Medical</span>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#skills">Skills</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Services</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
-          
+          <li><a class="nav-link scrollto" href="#testimonials">Contact Us</a></li>
+
         
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
