edited index - home and testimonials

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">Maxio Medical</h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
-                maxio Medical Limited was established to serve and cater for clients in Kenya and East Africa at large.
+                Maxio Medical Limited was established to serve and cater for clients in Kenya and East Africa at large.
                 Our expert team is made up of specialist who specialize in all areas of cardiac care,
                 including peripheral artery disease (PAD), vein therapy and cardiology.
                 We have built a reputation as the premier cardiology equipment supplier group in the area.
-                We understand that the health and welfare of family is critical and serve you and your family as if you
+                We understand that the health and welfare of everyone is critical and serve hospitals, you and your client as if you
                 were our own.
             </h2>
             <div data-aos="fade-up" data-aos-delay="600">
@@ -564,7 +564,7 @@
                 </p>
                 <div class="profile mt-auto">
                   <img
-                    src="assets/img/usermale.png"
+                    src="assets/img/userfemale.png"
                     class="testimonial-img"
                     alt=""
                   />
