--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="home__container container bd-container bd-grid">
         <div class="row"> 
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Maxio Medical</h1>
+            <h1 data-aos="fade-up">Maxio Medical Supplies Ltd</h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
                 Maxio Medical Limited was established to serve and cater for clients in Kenya and East Africa at large.
                 Our expert team is made up of specialist who specialize in all areas of cardiac care,
