--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 data-aos="fade-up" data-aos-delay="400">
                 Maxio Medical Limited was established to serve and cater for clients in Kenya and East Africa at large.
                 Our expert team is made up of specialist who specialize in all areas of cardiac care,
-                including peripheral artery disease (PAD), vein therapy and cardiology.
+                including peripheral artery disease, vein therapy and cardiology.
                 We have built a reputation as the premier cardiology equipment supplier group in the area.
                 We understand that the health and welfare of everyone is critical and serve hospitals, you and your client as if you
                 were our own.
