--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- ======= Hero Section ======= -->
     <section id="home" class="hero d-flex align-items-center">
-      <div class="home__container container bd-container bd-grid">
+      <div class="home__container bd-container bd-grid p-4">
         <div class="row"> 
           <div class="col-lg-6 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">Maxio Medical Supplies Ltd</h1>
@@ -80,7 +80,7 @@
                   target="_blank"
                   class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
                 >
-                  <span>Email Me</span>
+                  <span>Email Us</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
