--- a/index.html
+++ b/index.html
@@ -629,13 +629,13 @@
           <a href="https://www.facebook.com/" target="_blank"
           ><i class="bi bi-facebook"></i
           ></a>
-          <a href="www.linked.com" target="_blank"
+          <a href="https://www.linkedin.com/" target="_blank"
           ><i class="bi bi-linkedin"></i
           ></a>
-        <a href="www.twitter.com" target="_blank"
+        <a href="https://twitter.com/" target="_blank"
           ><i class="bi bi-twitter"></i
         ></a>
-        <a href="www.instagram.com" target="_blank"
+        <a href="https://www.instagram.com/" target="_blank"
           ><i class="bi bi-instagram"></i
         ></a>
 
